--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Git y github demo</h1>
+    <h1>Git y github</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur eaque nisi sint harum id, ab facilis a enim accusamus non quaerat, mollitia ipsam sunt voluptate nihil animi cum delectus?</p>
 </body>
 </html>
