--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Git y github-</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur eaque nisi sint harum id, ab facilis a enim accusamus non quaerat, mollitia ipsam sunt voluptate nihil animi cum delectus?</p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur eaque nisi sint harum id, ab facilis a enim accusamus non quaerat, mollitia ipsam sunt voluptate nihil animi cum delectus?</p>
+        Registro para evaluar cambios en git
 </body>
 </html>
