Revert "Espacio y rfrase para ver cambios"
This reverts commit 8bc021a8aa0c69204dd11819724fc4d6ddd69f11.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
     <h1>Git y github-</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur eaque nisi sint harum id, ab facilis a enim accusamus non quaerat, mollitia ipsam sunt voluptate nihil animi cum delectus?</p>
-        Registro para evaluar cambios en git
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur eaque nisi sint harum id, ab facilis a enim accusamus non quaerat, mollitia ipsam sunt voluptate nihil animi cum delectus?</p>
 </body>
 </html>
